kubernetes/networks/core-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: core
spec:
  podSelector:
    matchLabels:
      network-core: "true"
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network-core: "true"
