kubernetes/networks/public-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: public
spec:
  podSelector:
    matchLabels:
      network-public: "true"
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network-public: "true"
